--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@
     border-radius: 16px;
     font-family:'Poppins', sans-serif;
     font-weight: 700;
+    font-size: 1.3em;
     
 }
 
@@ -73,6 +74,7 @@
     height: 5em;
     align-items: center;
     font-size: 1em;
+    margin-bottom: -1em;
 }
 
 .especificacoes__esp{
